--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -159,6 +159,7 @@ endif()
 if(miopengemm_FOUND)
     list(APPEND MIOpen_Source 
         gemm.cpp
+        gemm_api.cpp
         gemm_geometry.cpp
     )
 endif()
