PerfDb-asm, patch 00 (initial implementation).
Squeeze commits: f1e52e8d, 55424789, e9ff05dc, 2bc90b73:
- Implemented DataEntry class and used it in legacy exhaustive search.
- Made asm bwd wrw 3x3 auto perf tune using a generic interface for its data.
- Clang-format. Tidy fixes. Remove debug output.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -59,6 +59,7 @@ set( MIOpen_Source
     convolution.cpp
     convolution_api.cpp
     convolution_fft.cpp
+    data_entry.cpp
     load_file.cpp
     pooling_api.cpp
     kernel_warnings.cpp
@@ -69,6 +70,7 @@ set( MIOpen_Source
     softmax_api.cpp
     batch_norm.cpp
     batch_norm_api.cpp
+    include/miopen/data_entry.hpp
     include/miopen/batch_norm.hpp
     include/miopen/common.hpp
     include/miopen/convolution.hpp
