Perf Db updates (3) - Every Solver now has symbolic name. - Allow empty performance configs. - Doc additions and fixes. - solver.cpp added. - Some other refactorings.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -92,6 +92,7 @@ set( MIOpen_Source
     include/miopen/softmax.hpp
     tensor.cpp
     tensor_api.cpp
+    solver.cpp
     solver/conv_asm_3x3u.cpp
     solver/conv_asm_5x10u2v2f1.cpp
     solver/conv_asm_5x10u2v2b1.cpp
