Perf Db: Rename new files to db_record.cpp/hpp. Fix build warnings in unit test.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -60,7 +60,7 @@ set( MIOpen_Source
     convolution.cpp
     convolution_api.cpp
     convolution_fft.cpp
-    data_entry.cpp
+    db_record.cpp
     load_file.cpp
     pooling_api.cpp
     kernel_warnings.cpp
@@ -71,7 +71,7 @@ set( MIOpen_Source
     softmax_api.cpp
     batch_norm.cpp
     batch_norm_api.cpp
-    include/miopen/data_entry.hpp
+    include/miopen/db_record.hpp
     include/miopen/batch_norm.hpp
     include/miopen/check_numerics.hpp
     include/miopen/common.hpp
