Perf Db updates (5) - Added support for BACKWARD COMPATIBILITY with existing conv perf db (MIOPEN_PERFDB_CONV_LEGACY_SUPPORT). - Added comprehensive diag messages. - Db logging reworked. Verbosity level introduced (MIOPEN_DB_RECORD_LOGLEVEL).

--- a/include/miopen/config.h.in
+++ b/include/miopen/config.h.in
@@ -37,5 +37,6 @@
 #cmakedefine MIOPEN_CACHE_DIR "@MIOPEN_CACHE_DIR@"
 
 #cmakedefine01 MIOPEN_USE_CACHE
+#define MIOPEN_PERFDB_CONV_LEGACY_SUPPORT 1
 
 #endif
