Make cache required and remove the dependencies as optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,12 +142,10 @@ else()
     set(MIOPEN_USE_MIOPENGEMM 0)
 endif()
 
-find_package(OpenSSL)
+find_package(OpenSSL REQUIRED)
 set(BOOST_COMPONENTS filesystem system)
 add_definitions(-DBOOST_ALL_NO_LIB=1)
-find_package(Boost COMPONENTS ${BOOST_COMPONENTS})
-
-set(MIOPEN_USE_CACHE On CACHE BOOL "")
+find_package(Boost REQUIRED COMPONENTS ${BOOST_COMPONENTS})
 
 option( BUILD_SHARED_LIBS "Build as a shared library" ON )
 
