Link to librt on UNIX. Needed by Boost.Interprocess

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,19 +1,19 @@
 ################################################################################
-# 
+#
 # MIT License
-# 
+#
 # Copyright (c) 2017 Advanced Micro Devices, Inc.
-# 
+#
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
 # in the Software without restriction, including without limitation the rights
 # to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 # copies of the Software, and to permit persons to whom the Software is
 # furnished to do so, subject to the following conditions:
-# 
+#
 # The above copyright notice and this permission notice shall be included in all
 # copies or substantial portions of the Software.
-# 
+#
 # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 # IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 # FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -21,7 +21,7 @@
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
-# 
+#
 ################################################################################
 cmake_minimum_required( VERSION 2.8.12 )
 
@@ -132,7 +132,7 @@ if( MIOPEN_BACKEND MATCHES "OpenCL" OR MIOPEN_BACKEND STREQUAL "HIPOC" OR MIOPEN
         kernels/MIOpenNeuron.cl
         kernels/MIOpenPooling.cl
         kernels/MIOpenPoolingBwd.cl
-        kernels/MIOpenConvDirUniC.cl        
+        kernels/MIOpenConvDirUniC.cl
         kernels/MIOpenConv1x1S.cl
         kernels/MIOpenConv1x1J1.cl
         kernels/MIOpenConv1x1J1_stride.cl
@@ -170,10 +170,10 @@ if( MIOPEN_BACKEND MATCHES "OpenCL" OR MIOPEN_BACKEND STREQUAL "HIPOC" OR MIOPEN
         kernels/conv_3x3_wheel_alpha_v3_0b_gfx803_m21.so
         kernels/conv_3x3_wheel_alpha_v3_0b_gfx803_m10.so
         kernels/MIOpenConvBwdBias.cl)
-    
+
     add_kernels("${MIOPEN_KERNELS}")
     configure_file(db.cpp.in ${PROJECT_BINARY_DIR}/db.cpp)
-    list(APPEND MIOpen_Source 
+    list(APPEND MIOpen_Source
         activ.cpp
         kernel_cache.cpp
         lrn.cpp
@@ -198,7 +198,7 @@ if( MIOPEN_BACKEND MATCHES "OpenCL" OR MIOPEN_BACKEND STREQUAL "HIPOC" OR MIOPEN
 endif()
 
 if(miopengemm_FOUND)
-    list(APPEND MIOpen_Source 
+    list(APPEND MIOpen_Source
         gemm.cpp
         gemm_api.cpp
         gemm_geometry.cpp
@@ -206,7 +206,7 @@ if(miopengemm_FOUND)
 endif()
 
 if( MIOPEN_BACKEND STREQUAL "OpenCL" )
-    list(APPEND MIOpen_Source 
+    list(APPEND MIOpen_Source
         ocl/handleocl.cpp
         ocl_kernel.cpp
         ocl/oclerrors.cpp
@@ -215,7 +215,7 @@ if( MIOPEN_BACKEND STREQUAL "OpenCL" )
 endif()
 
 if( MIOPEN_BACKEND STREQUAL "HIPOC" OR MIOPEN_BACKEND STREQUAL "HIP")
-    list(APPEND MIOpen_Source 
+    list(APPEND MIOpen_Source
         hip/hiperrors.cpp
         hip/handlehip.cpp
         hipoc/hipoc_kernel.cpp
@@ -225,7 +225,7 @@ endif()
 
 if( MIOPEN_BACKEND MATCHES "OpenCL" OR MIOPEN_BACKEND STREQUAL "HIPOC" OR MIOPEN_BACKEND STREQUAL "HIP")
     list(APPEND MIOpen_Source ${PROJECT_BINARY_DIR}/include/miopen_kernels.h)
- 
+
     add_custom_command(
         OUTPUT ${PROJECT_BINARY_DIR}/include/miopen_kernels.h
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
@@ -250,7 +250,7 @@ set_target_properties(MIOpen PROPERTIES SOVERSION 1)
 
 clang_tidy_check(MIOpen)
 
-target_include_directories(MIOpen PUBLIC 
+target_include_directories(MIOpen PUBLIC
     $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src/include>
 )
 
@@ -327,10 +327,17 @@ local:
 endif()
 
 ############################################################
+# MIOpen depends on librt for Boost.Interprocess
+if(NOT WIN32 AND NOT APPLE)
+    find_library(LIBRT rt)
+    target_link_libraries(MIOpen PRIVATE ${LIBRT})
+endif()
+
+############################################################
 # Installation
 rocm_install_targets(
   TARGETS MIOpen
-  INCLUDE 
+  INCLUDE
     ${PROJECT_SOURCE_DIR}/include
     ${PROJECT_BINARY_DIR}/include
   PREFIX ${MIOPEN_INSTALL_DIR}
@@ -340,12 +347,12 @@ rocm_export_targets(
   TARGETS MIOpen
   PREFIX ${MIOPEN_INSTALL_DIR}
   DEPENDS
-    ${PACKAGE_DEPENDS} 
+    ${PACKAGE_DEPENDS}
 )
 
 
 # Install db files
-install(FILES 
+install(FILES
     kernels/gfx803_64.cd.pdb.txt
     kernels/gfx900_64.cd.pdb.txt
  DESTINATION ${DATA_INSTALL_DIR}/db)
