Remove unused variables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -254,7 +254,7 @@ enable_cppcheck(
         noExplicitConstructor
         passedByValue
         # preprocessorErrorDirective
-        unusedVariable
+        unusedStructMember
         *:*.cl
     SOURCES
         include/
