--- a/include/miopen/config.h.in
+++ b/include/miopen/config.h.in
@@ -31,6 +31,7 @@
 #cmakedefine01 MIOPEN_BACKEND_HIP
 #cmakedefine01 MIOPEN_USE_MIOPENGEMM
 #cmakedefine01 MIOPEN_BUILD_DEV
+#cmakedefine01 MIOPEN_GPU_SYNC
 
 #cmakedefine MIOPEN_AMDGCN_ASSEMBLER "@MIOPEN_AMDGCN_ASSEMBLER@"
 #cmakedefine HIP_OC_COMPILER "@HIP_OC_COMPILER@"
