fix-issue-672(1) Fix/improve bug34765 detection. Implement changes in 5x10 asm kernels. Details: - Fixed Direct Asm 5x10 u2v2 Forward - Fixed Direct Asm 5x10 u2v2 Backward - Fixed assembly in gcn assembler bug detection. - Added dedicated function for bug detection (shut stderr etc.) - Added make depenedence of add_kernels from asm .inc files. - Add standard header to bug detection .s file. - Some renames/refactorings.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -120,6 +120,10 @@ set( MIOpen_Source
 list(APPEND MIOpen_Source tmp_dir.cpp binary_cache.cpp md5.cpp)
 
 if( MIOPEN_BACKEND MATCHES "OpenCL" OR MIOPEN_BACKEND STREQUAL "HIPOC" OR MIOPEN_BACKEND STREQUAL "HIP")
+    set(MIOPEN_KERNEL_INCLUDES
+        kernels/gcn_asm_workarounds.inc
+        kernels/gpr_alloc.inc)
+
     set(MIOPEN_KERNELS
         kernels/MIOpenCheckNumerics.cl
         kernels/MIOpenBatchNormFwdTrainSpatial.cl
@@ -238,7 +242,7 @@ if( MIOPEN_BACKEND MATCHES "OpenCL" OR MIOPEN_BACKEND STREQUAL "HIPOC" OR MIOPEN
     add_custom_command(
         OUTPUT ${PROJECT_BINARY_DIR}/include/miopen_kernels.h
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-        DEPENDS addkernels ${MIOPEN_KERNELS}
+        DEPENDS addkernels ${MIOPEN_KERNELS} ${MIOPEN_KERNEL_INCLUDES}
         COMMAND ${WINE_CMD} $<TARGET_FILE:addkernels> -guard GUARD_MIOPEN_KERNELS_HPP_ -target ${PROJECT_BINARY_DIR}/include/miopen_kernels.h -source ${MIOPEN_KERNELS}
         COMMENT "Inlining MIOpen kernels"
         )
