fix-issue-672(6) Fixed Direct Asm 1x1 WrW Backward

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -123,6 +123,9 @@ list(APPEND MIOpen_Source tmp_dir.cpp binary_cache.cpp md5.cpp)
 if( MIOPEN_BACKEND MATCHES "OpenCL" OR MIOPEN_BACKEND STREQUAL "HIPOC" OR MIOPEN_BACKEND STREQUAL "HIP")
     set(MIOPEN_KERNEL_INCLUDES
         kernels/gcn_asm_workarounds.inc
+        kernels/common.inc
+        kernels/conv_sizes.inc
+        kernels/macro1x1wrw.inc
         kernels/gpr_alloc.inc)
 
     set(MIOPEN_KERNELS
