--- a/src/db.cpp.in
+++ b/src/db.cpp.in
@@ -37,4 +37,13 @@ std::string GetDbPath()
         return p;
 }
 
+std::string GetUserDbPath()
+{
+    auto p = std::getenv("MIOPEN_USER_DB_PATH"); /// \todo Read env once - use GetStringEnv().
+    if(p == nullptr)
+        return "${MIOPEN_USER_DB_PATH}";
+    else
+        return p;
+}
+
 } // namespace miopen
