Minor CMake fixes, minor includes refactor

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -91,6 +91,14 @@ function(add_test_executable TEST_NAME)
     add_dependencies(tests ${TEST_NAME})
     add_dependencies(check ${TEST_NAME})
     set_tests_properties(${TEST_NAME} PROPERTIES FAIL_REGULAR_EXPRESSION "FAILED")
+    target_link_libraries(${TEST_NAME}
+        optimized ${Boost_FILESYSTEM_LIBRARY_RELEASE}
+        optimized ${Boost_THREAD_LIBRARY_RELEASE}
+        optimized ${Boost_SYSTEM_LIBRARY_RELEASE}
+        debug ${Boost_FILESYSTEM_LIBRARY_DEBUG}
+        debug ${Boost_THREAD_LIBRARY_DEBUG}
+        debug ${Boost_SYSTEM_LIBRARY_DEBUG}
+    )
 endfunction(add_test_executable)
 
 file(GLOB TESTS *.cpp)
@@ -101,14 +109,6 @@ foreach(TEST ${TESTS})
     target_link_libraries(test_${BASE_NAME} MIOpen)
 endforeach()
 
-target_link_libraries(test_perfdb
-    optimized ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-    optimized ${Boost_THREAD_LIBRARY_RELEASE}
-    optimized ${Boost_SYSTEM_LIBRARY_RELEASE}
-    debug ${Boost_FILESYSTEM_LIBRARY_DEBUG}
-    debug ${Boost_THREAD_LIBRARY_DEBUG}
-    debug ${Boost_SYSTEM_LIBRARY_DEBUG}
-)
 function(add_custom_test NAME)
     add_custom_target(${NAME} ${ARGN})
     add_test(NAME ${NAME} COMMAND ${CMAKE_COMMAND} --build ${CMAKE_CURRENT_BINARY_DIR} --target ${NAME})
