--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -307,6 +307,11 @@ if(miopengemm_FOUND)
     target_link_libraries( MIOpen PUBLIC miopengemm )
 endif()
 
+if(rocblas_FOUND)
+    # This shouldn't be public
+    target_link_libraries( MIOpen PUBLIC roc::rocblas )
+endif()
+
 if(WIN32 AND NOT MSVC)
     if(BUILD_DEV)
         target_link_libraries(MIOpen PUBLIC -Wl,-export-all-symbols -Wl,-exclude-symbols=_Unwind_Resume)
