--- a/include/miopen/config.h.in
+++ b/include/miopen/config.h.in
@@ -30,6 +30,7 @@
 #cmakedefine01 MIOPEN_BACKEND_HCC
 #cmakedefine01 MIOPEN_BACKEND_HIP
 #cmakedefine01 MIOPEN_USE_MIOPENGEMM
+#cmakedefine01 MIOPEN_USE_ROCBLAS
 #cmakedefine01 MIOPEN_BUILD_DEV
 #cmakedefine01 MIOPEN_GPU_SYNC
 
